@@ -8,7 +8,7 @@ ActiveRecord::Migrator.migrate("#{Rails.root}/db/migrate")
 
 # Mixin the factory helper
 require File.expand_path("#{File.dirname(__FILE__)}/factory")
-class Test::Unit::TestCase #:nodoc:
+Test::Unit::TestCase.class_eval do
   include Factory
 end
 
